Fix squashed increment buttons on configuration tab number inputs

--- a/src/css/tabs/configuration.css
+++ b/src/css/tabs/configuration.css
@@ -135,7 +135,7 @@
     width: 100px;
     padding-left: 3px;
     height: 22px;
-    line-height: 20px;
+    line-height: 22px;
     text-align: left;
     border-radius: 3px;
     font-size: 12px;
